import grpc
from authentication.proto import auth_pb2_grpc
from authentication.models import CustomUser  # 필요한 모델을 import


class AuthService(auth_pb2_grpc.AuthServicer):
    # AuthService 클래스의 메서드를 여기에 구현합니다.
    # 예시로 VerifyToken 메서드 구현:
    def VerifyToken(self, request, context):
        # 토큰 검증 로직을 여기에 구현합니다.
        return auth_pb2_grpc.VerifyTokenResponse(isValid=True)  # 예시 응답
